# avm-gen

./: .gitignore  CMakeLists.txt  README.md
cmake/: libzip.cmake  lzma.cmake  qtaes.cmake  qtrsa.cmake  zlib.cmake
include/avm-gen/: binary_file.h  datatypes.h  error.h  errorqueue.h  executecommand.h  files.h  floats.h  ftpengine.h  helper.h  httpengine.h  integers.h  logger.h  memsettings.h  messagehandler.h  netip.h  settings.h  singleton.h  std_ext.h  stdfunc.h  strings.h  threadpool.h  timefunc.h  uint24.h
include/avm-gen/files/: ziputil.h
include/avm-gen/utils/: convertable.h  crc16.h  crc32.h
include/avm-gen/xml/: xmlattr.h  xmlbase.h  xmlparse.h
package/src/: shlibs
package/src/debian/: .changelog.kate-swp  changelog  control.in
package/src/debian-dev/: changelog  control.in
src/: encryption.cpp  error.cpp  errorqueue.cpp  executecommand.cpp  executecommand.h  ftpengine.cpp  helper.cpp  httpengine.cpp  logclass.cpp  logger.cpp  memsettings.cpp  messagehandler.cpp  netip.cpp  settings.cpp  stdfunc.cpp  threadpool.cpp  timefunc.cpp  uint24.cpp  xmlfunc.cpp
src/files/: files.cpp  ziputil.cpp
src/utils/: convertable.cpp  crc16.cpp  crc32.cpp
src/xml/: xmlattr.cpp  xmlbase.cpp  xmlparse.cpp
tests/: CMakeLists.txt  stdfunc_tests.cpp
